--- a/tox.ini
+++ b/tox.ini
@@ -533,7 +533,7 @@ commands =
     standalone-tpu-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-tpu run {posargs:--all}
     standalone-local-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-bind=0.0.0.0 -p wandb:mockserver-host=__auto__ -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=http://localhost:5000 --shard standalone-cpu run {posargs:--all}
 
-[testenv:regression-py{37,38,39,310}]
+[testenv:regression-{yolov5,huggingface,keras,tensorflow,pytorch,wandb-sdk,s3,sagemaker}-py{37,38,39,310}]
 install_command = pip install --extra-index-url https://download.pytorch.org/whl/cpu {opts} {packages}
 commands_pre =
 setenv =
@@ -553,5 +553,17 @@ whitelist_externals =
     curl
     source
 commands =
-    mkdir -p test-results
-    wandb login --relogin {env:WANDB_API_KEY}
+;    wandb login --relogin {env:WANDB_API_KEY}
+    git clone https://github.com/wandb/wandb-testing.git
+    python -m pip install pyyaml six wandb shortuuid
+    cd wandb-testing/regression
+    # TODO: remove the line with git checkout, it's WIP
+    git checkout update-py-v
+    regression-yolov5-py{37,38,39,310}: ./do-cloud-regression.sh tests/main/yolov5/ {posargs:--all}
+    regression-huggingface-py{37,38,39,310}: ./do-cloud-regression.sh tests/main/huggingface/ {posargs:--all}
+    regression-keras-py{37,38,39,310}: ./do-cloud-regression.sh tests/main/keras/ {posargs:--all}
+    regression-tensorflow-py{37,38,39,310}: ./do-cloud-regression.sh tests/main/tensorflow/ {posargs:--all}
+    regression-pytorch-py{37,38,39,310}: ./do-cloud-regression.sh tests/main/pytorch/ {posargs:--all}
+    regression-wandb-sdk-py{37,38,39,310}: ./do-cloud-regression.sh tests/main/wandb-git/ {posargs:--all}
+    regression-wandb-s3-py{37,38,39,310}: ./do-s3-regression.sh tests/s3-beta/ {posargs:--all}
+    regression-sagemaker-py{37,38,39,310}: ./do-sagemaker-regression.sh {posargs:--all}
