--- a/tox.ini
+++ b/tox.ini
@@ -539,11 +539,7 @@ commands_pre =
 setenv =
     {[base]setenv}
     COVERAGE_FILE={envdir}/.coverage
-    WANDB_PROJECT=standalone-{env:DATE}
-passenv =
-    DATE
-    USERNAME
-    WANDB_API_KEY
+passenv = *
 whitelist_externals =
     date
     echo
