--- a/tox.ini
+++ b/tox.ini
@@ -541,7 +541,6 @@ setenv =
     COVERAGE_FILE={envdir}/.coverage
 passenv = *
 whitelist_externals =
-    cd
     echo
     export
     mkdir
@@ -552,14 +551,13 @@ commands =
 ;    wandb login --relogin {env:WANDB_API_KEY}
     git clone https://github.com/wandb/wandb-testing.git
     python -m pip install pyyaml six wandb shortuuid
-    cd wandb-testing/regression
     # TODO: remove the line with git checkout, it's WIP
     git checkout update-py-v
-    regression-yolov5-py{37,38,39,310}: ./do-cloud-regression.sh tests/main/yolov5/ {posargs:--all}
-    regression-huggingface-py{37,38,39,310}: ./do-cloud-regression.sh tests/main/huggingface/ {posargs:--all}
-    regression-keras-py{37,38,39,310}: ./do-cloud-regression.sh tests/main/keras/ {posargs:--all}
-    regression-tensorflow-py{37,38,39,310}: ./do-cloud-regression.sh tests/main/tensorflow/ {posargs:--all}
-    regression-pytorch-py{37,38,39,310}: ./do-cloud-regression.sh tests/main/pytorch/ {posargs:--all}
-    regression-wandb-sdk-py{37,38,39,310}: ./do-cloud-regression.sh tests/main/wandb-git/ {posargs:--all}
-    regression-wandb-s3-py{37,38,39,310}: ./do-s3-regression.sh tests/s3-beta/ {posargs:--all}
-    regression-sagemaker-py{37,38,39,310}: ./do-sagemaker-regression.sh {posargs:--all}
+    regression-yolov5-py{37,38,39,310}: ./wandb-testing/regression/do-cloud-regression.sh wandb-testing/regression/tests/main/yolov5/ {posargs:--all}
+    regression-huggingface-py{37,38,39,310}: ./wandb-testing/regression/do-cloud-regression.sh wandb-testing/regression/tests/main/huggingface/ {posargs:--all}
+    regression-keras-py{37,38,39,310}: ./wandb-testing/regression/do-cloud-regression.sh wandb-testing/regression/tests/main/keras/ {posargs:--all}
+    regression-tensorflow-py{37,38,39,310}: ./wandb-testing/regression/do-cloud-regression.sh wandb-testing/regression/tests/main/tensorflow/ {posargs:--all}
+    regression-pytorch-py{37,38,39,310}: ./wandb-testing/regression/do-cloud-regression.sh wandb-testing/regression/tests/main/pytorch/ {posargs:--all}
+    regression-wandb-sdk-py{37,38,39,310}: ./wandb-testing/regression/do-cloud-regression.sh wandb-testing/regression/tests/main/wandb-git/ {posargs:--all}
+    regression-wandb-s3-py{37,38,39,310}: ./wandb-testing/regression/do-s3-regression.sh wandb-testing/regression/tests/s3-beta/ {posargs:--all}
+    regression-sagemaker-py{37,38,39,310}: ./wandb-testing/regression/do-sagemaker-regression.sh {posargs:--all}
