--- a/tox.ini
+++ b/tox.ini
@@ -549,10 +549,8 @@ whitelist_externals =
     source
 commands =
 ;    wandb login --relogin {env:WANDB_API_KEY}
-    git clone https://github.com/wandb/wandb-testing.git
+    git clone https://github.com/wandb/wandb-testing.git@update-py-v
     python -m pip install pyyaml six wandb shortuuid
-    # TODO: remove the line with git checkout, it's WIP
-    git checkout update-py-v
     regression-yolov5-py{37,38,39,310}: ./wandb-testing/regression/do-cloud-regression.sh wandb-testing/regression/tests/main/yolov5/ {posargs:--all}
     regression-huggingface-py{37,38,39,310}: ./wandb-testing/regression/do-cloud-regression.sh wandb-testing/regression/tests/main/huggingface/ {posargs:--all}
     regression-keras-py{37,38,39,310}: ./wandb-testing/regression/do-cloud-regression.sh wandb-testing/regression/tests/main/keras/ {posargs:--all}
