--- a/tox.ini
+++ b/tox.ini
@@ -549,7 +549,7 @@ whitelist_externals =
     source
 commands =
 ;    wandb login --relogin {env:WANDB_API_KEY}
-    git clone https://github.com/wandb/wandb-testing.git@update-py-v
+    git clone -b update-py-v https://github.com/wandb/wandb-testing.git
     python -m pip install pyyaml six wandb shortuuid
     regression-yolov5-py{37,38,39,310}: ./wandb-testing/regression/do-cloud-regression.sh wandb-testing/regression/tests/main/yolov5/ {posargs:--all}
     regression-huggingface-py{37,38,39,310}: ./wandb-testing/regression/do-cloud-regression.sh wandb-testing/regression/tests/main/huggingface/ {posargs:--all}
