--- a/tox.ini
+++ b/tox.ini
@@ -539,8 +539,10 @@ commands_pre =
 setenv =
     {[base]setenv}
     COVERAGE_FILE={envdir}/.coverage
+    TESTING_DIR={toxinidir}/wandb-testing/regression
 passenv = *
 whitelist_externals =
+    git
     echo
     export
     mkdir
@@ -548,14 +550,13 @@ whitelist_externals =
     curl
     source
 commands =
-;    wandb login --relogin {env:WANDB_API_KEY}
     git clone -b update-py-v https://github.com/wandb/wandb-testing.git
     python -m pip install pyyaml six wandb shortuuid
-    regression-yolov5-py{37,38,39,310}: ./wandb-testing/regression/do-cloud-regression.sh wandb-testing/regression/tests/main/yolov5/ {posargs:--all}
-    regression-huggingface-py{37,38,39,310}: ./wandb-testing/regression/do-cloud-regression.sh wandb-testing/regression/tests/main/huggingface/ {posargs:--all}
-    regression-keras-py{37,38,39,310}: ./wandb-testing/regression/do-cloud-regression.sh wandb-testing/regression/tests/main/keras/ {posargs:--all}
-    regression-tensorflow-py{37,38,39,310}: ./wandb-testing/regression/do-cloud-regression.sh wandb-testing/regression/tests/main/tensorflow/ {posargs:--all}
-    regression-pytorch-py{37,38,39,310}: ./wandb-testing/regression/do-cloud-regression.sh wandb-testing/regression/tests/main/pytorch/ {posargs:--all}
-    regression-wandb-sdk-py{37,38,39,310}: ./wandb-testing/regression/do-cloud-regression.sh wandb-testing/regression/tests/main/wandb-git/ {posargs:--all}
-    regression-wandb-s3-py{37,38,39,310}: ./wandb-testing/regression/do-s3-regression.sh wandb-testing/regression/tests/s3-beta/ {posargs:--all}
-    regression-sagemaker-py{37,38,39,310}: ./wandb-testing/regression/do-sagemaker-regression.sh {posargs:--all}
+    regression-yolov5-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/yolov5/ {posargs}
+    regression-huggingface-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/huggingface/ {posargs}
+    regression-keras-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/keras/ {posargs}
+    regression-tensorflow-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/tensorflow/ {posargs}
+    regression-pytorch-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/pytorch/ {posargs}
+    regression-wandb-sdk-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/wandb-git/ {posargs}
+    regression-wandb-s3-py{37,38,39,310}: {env:TESTING_DIR}/do-s3-regression.sh {env:TESTING_DIR}/tests/s3-beta/ {posargs}
+    regression-sagemaker-py{37,38,39,310}: {env:TESTING_DIR}/do-sagemaker-regression.sh {posargs}
