--- a/tox.ini
+++ b/tox.ini
@@ -559,4 +559,4 @@ commands =
     regression-pytorch-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/pytorch/ {posargs}
     regression-wandb-sdk-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/wandb-git/ {posargs}
     regression-wandb-s3-py{37,38,39,310}: {env:TESTING_DIR}/do-s3-regression.sh {env:TESTING_DIR}/tests/s3-beta/ {posargs}
-    regression-sagemaker-py{37,38,39,310}: {env:TESTING_DIR}/do-sagemaker-regression.sh {posargs}
+    regression-sagemaker-py{37,38,39,310}: {env:TESTING_DIR}/do-sagemaker-regression.sh {env:TESTING_DIR}/tests/sagemaker-beta/ {posargs}
