--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ envlist=
     func-s_{base,sklearn,metaflow,tf115,tf21,tf24,tf25,tf26,ray112,ray2,service,docs,
             imports{1,2,3,4,5,6,7,8,9,10,11,12},noml,grpc}-py37,
     standalone-{cpu,gpu,tpu,local}-py38,
-    regression-py{37,38,39,310},
+    regression-{yolov5,huggingface,keras,tensorflow,pytorch,wandb-sdk-{standalone,examples,wandb-examples},s3,sagemaker}-py{37,38,39,310},
     func-cover,
     cover
 
@@ -533,7 +533,7 @@ commands =
     standalone-tpu-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-tpu run {posargs:--all}
     standalone-local-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-bind=0.0.0.0 -p wandb:mockserver-host=__auto__ -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=http://localhost:5000 --shard standalone-cpu run {posargs:--all}
 
-[testenv:regression-{yolov5,huggingface,keras,tensorflow,pytorch,wandb-sdk,s3,sagemaker}-py{37,38,39,310}]
+[testenv:regression-{yolov5,huggingface,keras,tensorflow,pytorch,wandb-sdk-{standalone,examples,wandb-examples},s3,sagemaker}-py{37,38,39,310}]
 install_command = pip install --extra-index-url https://download.pytorch.org/whl/cpu {opts} {packages}
 commands_pre =
 setenv =
@@ -557,6 +557,8 @@ commands =
     regression-keras-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/keras/ {posargs}
     regression-tensorflow-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/tensorflow/ {posargs}
     regression-pytorch-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/pytorch/ {posargs}
-    regression-wandb-sdk-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/wandb-git/ {posargs}
+    regression-wandb-sdk-standalone-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/wandb-git/standalone_tests {posargs}
+    regression-wandb-sdk-examples-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/wandb-git/examples {posargs}
+    regression-wandb-sdk-wandb-examples-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/wandb-git/wandb-examples {posargs}
     regression-wandb-s3-py{37,38,39,310}: {env:TESTING_DIR}/do-s3-regression.sh {env:TESTING_DIR}/tests/s3-beta/ {posargs}
     regression-sagemaker-py{37,38,39,310}: {env:TESTING_DIR}/do-sagemaker-regression.sh {env:TESTING_DIR}/tests/sagemaker-beta/ {posargs}
