--- a/tox.ini
+++ b/tox.ini
@@ -533,7 +533,7 @@ commands =
     standalone-tpu-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-tpu run {posargs:--all}
     standalone-local-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-bind=0.0.0.0 -p wandb:mockserver-host=__auto__ -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=http://localhost:5000 --shard standalone-cpu run {posargs:--all}
 
-[testenv:regression-{yolov5,huggingface,keras,tensorflow,pytorch,wandb-sdk-standalone,wandb-sdk-examples,wandb-sdk-wandb-examples,s3,sagemaker}-py{37,38,39,310}]
+[testenv:regression-{yolov5,huggingface,keras,tensorflow,pytorch,wandb-sdk-standalone,wandb-sdk-examples,wandb-sdk-other,s3,sagemaker}-py{37,38,39,310}]
 install_command = pip install --extra-index-url https://download.pytorch.org/whl/cpu {opts} {packages}
 commands_pre =
 setenv =
@@ -559,6 +559,6 @@ commands =
     regression-pytorch-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/pytorch/ {posargs}
     regression-wandb-sdk-standalone-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/wandb-git/client/standalone_tests {posargs}
     regression-wandb-sdk-examples-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/wandb-git/examples {posargs}
-    regression-wandb-sdk-wandb-examples-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/wandb-git/wandb-examples {posargs}
+    regression-wandb-sdk-other-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/wandb-git/wandb-examples {posargs}
     regression-wandb-s3-py{37,38,39,310}: {env:TESTING_DIR}/do-s3-regression.sh {env:TESTING_DIR}/tests/s3-beta/ {posargs}
     regression-sagemaker-py{37,38,39,310}: {env:TESTING_DIR}/do-sagemaker-regression.sh {env:TESTING_DIR}/tests/sagemaker-beta/ {posargs}
