--- a/tox.ini
+++ b/tox.ini
@@ -549,16 +549,21 @@ whitelist_externals =
     sh
     curl
     source
+    time
+    set
+    pushd
+    popd
+    ulimit
 commands =
     git clone -b update-py-v https://github.com/wandb/wandb-testing.git
     python -m pip install pyyaml six wandb shortuuid
-    regression-yolov5-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/yolov5/ {posargs}
-    regression-huggingface-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/huggingface/ {posargs}
-    regression-keras-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/keras/ {posargs}
-    regression-tensorflow-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/tensorflow/ {posargs}
-    regression-pytorch-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/pytorch/ {posargs}
-    regression-wandb-sdk-standalone-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/wandb-git/client/standalone_tests {posargs}
-    regression-wandb-sdk-examples-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/wandb-git/examples {posargs}
-    regression-wandb-sdk-other-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh {env:TESTING_DIR}/tests/main/wandb-git/wandb-examples {posargs}
-    regression-wandb-s3-py{37,38,39,310}: {env:TESTING_DIR}/do-s3-regression.sh {env:TESTING_DIR}/tests/s3-beta/ {posargs}
-    regression-sagemaker-py{37,38,39,310}: {env:TESTING_DIR}/do-sagemaker-regression.sh {env:TESTING_DIR}/tests/sagemaker-beta/ {posargs}
+    regression-yolov5-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh tests/main/yolov5/ {posargs}
+    regression-huggingface-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh tests/main/huggingface/ {posargs}
+    regression-keras-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh tests/main/keras/ {posargs}
+    regression-tensorflow-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh tests/main/tensorflow/ {posargs}
+    regression-pytorch-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh tests/main/pytorch/ {posargs}
+    regression-wandb-sdk-standalone-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh tests/main/wandb-git/client/standalone_tests {posargs}
+    regression-wandb-sdk-examples-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh tests/main/wandb-git/examples {posargs}
+    regression-wandb-sdk-other-py{37,38,39,310}: {env:TESTING_DIR}/do-cloud-regression.sh tests/main/wandb-git/wandb-examples {posargs}
+    regression-s3-py{37,38,39,310}: {env:TESTING_DIR}/do-s3-regression.sh tests/s3-beta/ {posargs}
+    regression-sagemaker-py{37,38,39,310}: {env:TESTING_DIR}/do-sagemaker-regression.sh tests/sagemaker-beta/ {posargs}
