--- a/tox.ini
+++ b/tox.ini
@@ -527,7 +527,7 @@ whitelist_externals =
     sh
 commands =
     mkdir -p test-results
-    wandb login --relogin {env:WANDB_API_KEY}
+    wandb login --relogin {env:WANDB_API_KEY} --host {env:WANDB_BASE_URL}
     standalone-cpu-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-cpu run {posargs:--all}
     standalone-gpu-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-gpu run {posargs:--all}
     standalone-tpu-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-tpu run {posargs:--all}
