--- a/wandb/sdk/launch/deploys/gcp-vertex/launch-config.yaml
+++ b/wandb/sdk/launch/deploys/gcp-vertex/launch-config.yaml
@@ -47,7 +47,6 @@ apiVersion: v1
 data:
   launch-config.yaml: |
     base_url: https://api.wandb.ai # TODO: set url
-    project:  # TODO: set project
     queues:  # TODO: set queues
     max_jobs: 1
     registry:
@@ -83,4 +82,5 @@ metadata:
   name: gcp-credentials
   namespace: wandb
 stringData:
+  # TODO: Add gcp credentials as the content of the json below
   credentials.json: |
